--- a/.gitignore
+++ b/.gitignore
@@ -1,44 +1,48 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Dependencies
+node_modules/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+# If standardizing on Bun, ignore other package manager lockfiles
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
 
-# testing
-/coverage
+# Next.js build outputs
+.next/
+out/
 
-# next.js
-/.next/
-/out/
+# Vercel CLI local project data
+.vercel/
 
-# production
-/build
+# Environment files (keep an example)
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.*.local
+!.env.example
 
-# misc
-.DS_Store
-*.pem
-
-# debug
+# Logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# Testing / coverage
+coverage/
 
-# vercel
-.vercel
+# Optional: TS/JS build output (if you emit)
+dist/
+build/
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# Turborepo cache (if used)
+.turbo/
 
-# ide
+# Editor / OS junk
+.DS_Store
+Thumbs.db
+.idea/
+.vscode/
 .vscode
+*.swp
+
