--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build --webpack",
     "start": "next start",
     "lint": "next lint",
     "generate:types": "payload generate:types",
@@ -58,7 +58,7 @@
     "graphql": "^16.12.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.510.0",
-    "next": "15.2.4",
+    "next": "^16.0.7",
     "next-themes": "^0.4.6",
     "payload": "^3.66.0",
     "react": "^19.2.1",
@@ -81,7 +81,7 @@
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "eslint": "^9.39.1",
-    "eslint-config-next": "15.2.4",
+    "eslint-config-next": "^16.0.7",
     "tailwindcss": "^4.1.17",
     "tw-animate-css": "^1.4.0",
     "typescript": "5.7.2"
